force-app/main/default/objects/NamedRangeTotal__c/NamedRangeTotal__c.object-meta.xml
<CustomObject>
    <label>Named Range Total</label>
    <nameField>
        <displayFormat>NRT-{0000000}</displayFormat>
        <label>Named Range Total</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Named Range Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>