force-app/main/default/objects/NamedRangeTotal__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>