force-app/main/default/objects/NamedRangeTotal__c/fields/NamedRangeId__c.field-meta.xml
<CustomField>
    <fullName>NamedRangeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Named Range</label>
    <referenceTo>NamedRange__c</referenceTo>
    <relationshipLabel>Named Range Totals</relationshipLabel>
    <relationshipName>NamedRangeTotals</relationshipName>
    <type>Lookup</type>
</CustomField>