force-app/main/default/objects/NamedRangeTotal__c/fields/NetExtendedCost__c.field-meta.xml
<CustomField>
    <fullName>NetExtendedCost__c</fullName>
    <label>Net Extended Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>