force-app/main/default/objects/NamedRangeTotal__c/fields/QuantityUOM__c.field-meta.xml
<CustomField>
    <fullName>QuantityUOM__c</fullName>
    <label>Quantity UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuantityUOMs</valueSetName>
    </valueSet>
</CustomField>